tests/docs/ojs/errors/test-no-echo.qmd
---
title: "No Echo + Error"
format: html
---

```{ojs}
//| echo: false
import { aq, op, badImport } from '@uwdata/arquero'
x = badImport
```
